# vbot

./: Cargo.toml  Dockerfile  LICENSE
migrations/: 20210924150739_faq.sql  README.md
src/: db.rs  extensions.rs  main.rs
src/commands/: echo.rs  errors.rs  help.rs  mod.rs
src/commands/faq/: faq.rs  mod.rs
