[package]
name = "vbot"
version = "0.1.0"
authors = ["arielbeje <arielbeje@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "A bot for the Factorio Discord server"

[dependencies]
serenity = "0.10"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
