[package]
name = "vbot"
version = "0.1.0"
authors = ["arielbeje <arielbeje@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "A bot for the Factorio Discord server"

[dependencies]
anyhow = "1.0"
serenity = "0.10"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1.0"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
